@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-13T16:10:59Z",
-  "count" : 262,
-  "count_minmax" : [ 142, 262 ],
-  "count_decinc" : [ -0, +262 ],
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "timestamp" : "2022-10-14T00:50:30Z",
+  "count" : 420,
+  "count_minmax" : [ 142, 420 ],
+  "count_decinc" : [ -0, +420 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 6, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
