@@ -1,3 +1,11 @@
+2022-10-14T00:50:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3246677698 # 527
+* notice: last 14d: unq all: 39 5731
+* notice: prev accum: outdated-unq outdated-all / unq all: 1101 71434 / 1163 77075
+* notice: next accum: outdated-unq outdated-all / unq all: 1103 71838 / 1168 77569
+* notice: prev exec diff / last date diff / accum: unq all: +4 +158 -0 -4 / +10 +420 -0 -0 / 10 420
+* notice: removed / changed dates: [2022-09-29] / [2022-09-30 2022-10-13]
+
 2022-10-13T16:10:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3243950489 # 526
 * notice: last 14d: unq all: 36 5641
